fixed minor changes to category spacing

--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,7 @@ body {
 }
 
 .category-container {
-  margin-top: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 16px;
   display: flex;
   justify-content: center;
 }
